fix button overlap on hero

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -312,7 +312,7 @@ p > a:link {
   grid-template-areas: 
   "title title body";
 
-  column-gap: 3rem;
+  column-gap: 2rem;
   row-gap: 2rem;
 }
 
